# bosscribe

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bosscribe/: __init__.py  cli.py  config.py  transcriber.py  utils.py
tests/: test_cli.py
