[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bosscribe"
version = "0.1.0"
description = "Dead-simple CLI to transcribe audio files. Your boss sends voice notes — you need them as text."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hetansh Waghela" },
]
keywords = ["transcribe", "whisper", "audio", "voice-notes", "cli", "opus", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "platformdirs>=4.0",
    "mlx-whisper>=0.1.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0.0 ; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform_machine != 'arm64')",
]

[project.scripts]
transcribe = "bosscribe.cli:main"

[project.urls]
Homepage = "https://github.com/HetanshWaghela/bosscribe"
Repository = "https://github.com/HetanshWaghela/bosscribe"
Issues = "https://github.com/HetanshWaghela/bosscribe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bosscribe"]

[[tool.mypy.overrides]]
module = ["mlx_whisper.*", "faster_whisper.*", "torch.*"]
ignore_missing_imports = true
